# Bongo-Cat-Fidget-Toy

./: .gitmodules  LICENSE  README.md
.github/workflows/: build.yml  release.yml
Hardware/3D/: LCD Support - Bongo-Cat-Fidget-Toy.step-1 Bongo-Cat-Fidget-Toy_PCB.step-1.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-1.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-10.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-11.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-2.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-3.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-4.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-5.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-6.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-7.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-8.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 C_0603_1608Metric.step-9.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 LQFP-32_7x7mm_P0.8mm.step-1.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 L_Wurth_WE-L__010.step-1 L_Wurth_WE-LQSH-2010-2.step-1.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-1.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-2.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-3.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-4.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-5.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-6.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-7.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-8.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 R_0603_1608Metric.step-9.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 SW-SMD_SK-3245S-L1-A-1.step-1 SOLID-0.step-1.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 SW-SMD_SK-3245S-L1-A-1.step-1 SOLID-1.step-1.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 SW-SMD_SK-3245S-L1-A-1.step-1 SOLID.step-1.STL  LCD Support - Bongo-Cat-Fidget-Toy.step-1 TPS63802DLAR.step-1.STL  LCD Support - LCD Support-1 - LCD Support-1.STL  LCD Support - LCD Support-1.STL  LCD Support.SLDPRT  LCD Support_-0.1.STL  LCD Support_-0.2.STL  LCD Support_-0.3.STL  LCD Support_-0.4.STL  LCD Support_-0.5.STL  LCD Support_0.0.STL  LCD Support_0.1.STL  LCD Support_0.2.STL  LCD Support_0.3.STL  LCD Support_0.5.STL  (+1 more)
Hardware/Bongo-Cat-Fidget-Toy/: #auto_saved_files#  Bongo-Cat-Fidget-Toy.kicad_pcb  Bongo-Cat-Fidget-Toy.kicad_prl  Bongo-Cat-Fidget-Toy.kicad_pro  Bongo-Cat-Fidget-Toy.kicad_sch  LCD support.stl  LCD_support_bambulab.3mf  LCD_support_bambulab_new.3mf  _autosave-Bongo-Cat-Fidget-Toy.kicad_pcb  box_insert.stl  box_insert_bambulab.3mf  fabrication-toolkit-options.json  fp-info-cache  fp-lib-table  ibom.config.ini  sym-lib-table  ~Bongo-Cat-Fidget-Toy.kicad_pcb.lck
Hardware/Bongo-Cat-Fidget-Toy-Lite-panel/: fabrication-toolkit-options.json  panel.kicad_prl  panel.kicad_pro  panel_conf.json
Hardware/Bongo-Cat-Fidget-Toy-Lite-panel/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Hardware/Bongo-Cat-Fidget-Toy-Lite/Bongo-Cat-Fidget-Toy-Lite/: Bongo-Cat-Fidget-Toy-Lite.kicad_pcb  Bongo-Cat-Fidget-Toy-Lite.kicad_pro  Bongo-Cat-Fidget-Toy-Lite.kicad_sch  LCD_support_bambulab.3mf  box_insert.stl  box_insert_bambulab.3mf  fp-lib-table  sym-lib-table
Hardware/Bongo-Cat-Fidget-Toy-panel/: Bongo-Cat-Fidget-Toy-panel.kicad_prl  Bongo-Cat-Fidget-Toy-panel.kicad_pro  bongo-cat-fidget-toy-panel.kicad_prl  bongo-cat-fidget-toy-panel.kicad_pro  fabrication-toolkit-options.json  panel.kicad_prl  panel.kicad_pro  panel_conf.json  report.txt  test.kicad_prl  test.kicad_pro
Hardware/Bongo-Cat-Fidget-Toy-panel/production/: bom.csv  designators.csv  netlist.ipc  panel-B_Cu.gbr  panel-B_Mask.gbr  panel-B_Paste.gbr  panel-B_Silkscreen.gbr  panel-Edge_Cuts.gbr  panel-F_Cu.gbr  panel-F_Mask.gbr  panel-F_Paste.gbr  panel-F_Silkscreen.gbr  panel-NPTH.drl  panel-PTH.drl  panel-User_1.gbr  panel-job.gbrjob  positions.csv
Hardware/Bongo-Cat-Fidget-Toy/bom/: ibom.html
Hardware/Bongo-Cat-Fidget-Toy/interactive_bom/: ibom.html
Hardware/Bongo-Cat-Fidget-Toy/libs/: Bongo-Cat-Fidget-Toy.kicad_sym  MCU_Puya_2.kicad_sym  SW-SMD_SK-3245S-L1-A-1.wrl  SW-SMD_SK-3296S-01-L3.wrl
Hardware/Bongo-Cat-Fidget-Toy/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
Media/128_64/expanded/: expanded_128_64.aseprite  sample_code.h
Media/128_64/original_size/: original_size_128_64.aseprite  sample_code.h
Software/: LICENSE
Software/Bongo-Cat-Fidget-Toy-Py32/: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Software/Bongo-Cat-Fidget-Toy-Py32/App/: bitmaps.c  bitmaps.h  bitmaps_angry.c  bitmaps_angry.h  bongo.c  bongo.h  main.c  main.h  py32f0xx_hal_conf.h  py32f0xx_hal_msp.c  ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.c
Software/Bongo-Cat-Fidget-Toy-Py32/Inc/: bitmaps_angry.h  bongo.h  main.h  py32f0xx_it.h  ssd1306.h  ssd1306_conf.h  ssd1306_fonts.h
Software/Bongo-Cat-Fidget-Toy-Py32/Src/: bongo.c  main.c  py32f0xx_it.c  ssd1306.c
Software/Bongo-cat-fidget-toy/: .cproject  .mxproject  .project  Bongo-cat-fidget-toy Debug.launch  Bongo-cat-fidget-toy.ioc  STM32G030K8TX_FLASH.ld
Software/Bongo-cat-fidget-toy-cmake/: .clangd  .gitignore  .mxproject  Bongo-cat-fidget-toy-cmake.ioc  CMakeLists.txt  CMakePresets.json  STM32G030XX_FLASH.ld
Software/Bongo-cat-fidget-toy-cmake/build_release/: Bongo-cat-fidget-toy-cmake.elf  Bongo-cat-fidget-toy-cmake.hex  Bongo-cat-fidget-toy-cmake.map  CMakeCache.txt  Makefile  cmake_install.cmake
Software/Bongo-cat-fidget-toy-cmake/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
Software/Bongo-cat-fidget-toy/Debug/: Bongo-cat-fidget-toy.elf  Bongo-cat-fidget-toy.hex  Bongo-cat-fidget-toy.list  Bongo-cat-fidget-toy.map  makefile  objects.list  sources.mk
(+115 files in other folders)
